# AWS-Quiz

./: README.md  app.py  poetry.toml  pyproject.toml
code/: customer_quiz.py  quiz_logic.py  random_30_quiz.py  range_quiz.py
