[tool.poetry]
name = "python-aws-quiz"
version = "0.1.0"
description = "A quiz application for Python basics and AWS certification practice"
authors = ["劉晏瑜 <franliu3578@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9,<3.9.7 || >3.9.7,<4.0"
streamlit = "^1.25.0"
pandas = "^2.1.1"
numpy = "^1.24.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
